# HandBrake

./: .appveyor.yml  .gitignore  .gitmodules  .travis.yml  00-BuildUserGuide.txt  00-Building.cygwin.txt  00-Building.linux.txt  00-Building.osx.txt  00.Building.cygwin.txt  00.Building.linux.txt  00.Building.osx.txt  AUTHORS  AUTHORS.markdown  BUILD  Brewfile  BuildContribsDarwin.sh  CODE_OF_CONDUCT.md  CONTRIBUTING.md  COPYING  CREDITS  CygWinContribBinariesVersion.txt  Dockerfile  DownloadCygWinContribBinaries.sh  DownloadMacOsXContribBinaries.sh  Doxyfile  Doxyfile2  Doxyfile2Mac  DoxyfileDotNet  DoxyfileGtk  DoxyfileLibHb  HBAc3Decoder.cpp  HBAc3Decoder.h  HBApp.cpp  HBApp.h  HBAviMuxer.cpp  HBAviMuxer.h  HBCommon.cpp  HBCommon.h  HBDVDReader.cpp  HBDVDReader.h  (+89 more)
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  dependabot.yml
Controls/: AdvancedEncoderOpts.cs  AudioPanel.Designer.cs  AudioPanel.cs  AudioPanel.resx  Filters.Designer.cs  Filters.cs  PictureSettings.cs  Subtitles.Designer.cs  Subtitles.cs  Subtitles.resx  x264Panel.cs  x264Panel.resx
Functions/: Main.cs  PresetLoader.cs  QueryGenerator.cs
HandBrake.ApplicationServices/: ASUserSettingConstants.cs  HandBrake.ApplicationServices.csproj  ServiceManager.cs  ServicesWindsorInstaller.cs  Settings.StyleCop  app.config
HandBrake.Interop/: HandBrakeInterop.sln  HandBrakeInterop.vsmdi  Local.testsettings
HandBrake.Server/: Program.cs
HandBrakeWPF/: App.xaml  App.xaml.cs  Constants.cs  HandBrakeWPF.csproj  Settings.StyleCop  UserSettingConstants.cs  app.config  defaultsettings.xml  releasenotes.html
Installer/: Installer.nsi  Installer64.nsi  MakeNightly.nsi.tmpl  MakeNightly64.nsi.tmpl
MP4toMOV/: MP4toMOV.rbp  README
Model/: QueryEncodeMode.cs
Properties/: AssemblyInfo.cs.tmpl  Resources.Designer.cs  Resources.resx  Settings.Designer.cs  Settings.settings
ToolWindows/: AdvancedAudio.Designer.cs  AdvancedAudio.cs  AdvancedAudio.resx  BatchAdd.Designer.cs  BatchAdd.cs  PreviewOverlay.resx  UpdateInfo.Designer.cs  UpdateInfo.cs
beos/: HBApp.cpp  HBApp.h  HBWindow.cpp  HBWindow.h  HandBrake.cpp  HandBrake.h  HandBrake.rsrc  MainWindow.cpp  MainWindow.h  PicWindow.cpp  PicWindow.h  PictureWin.cpp  PictureWin.h  QueueWindow.cpp  QueueWindow.h  RipView.cpp  RipView.h  ScanView.cpp  ScanView.h  ScanWindow.cpp  ScanWindow.h  Stepper.cpp  Stepper.h
contrib/: Jamfile  Makefile  ffmpeg.patch  patch-a52dec.patch  patch-faad2-libtool22.patch  patch-ffmpeg-cygwin.patch  patch-ffmpeg-latm.patch  patch-ffmpeg-mpegleak.patch  patch-ffmpeg-solaris.patch  patch-ffmpeg.patch  patch-libdca.patch  patch-libdvdread-css-vlc-dylib.patch  patch-libdvdread.patch  patch-libmpeg2.patch  patch-libquicktime.patch  patch-mpeg4ip-ac3.patch  patch-mpeg4ip-colr.patch  patch-mpeg4ip-faac.patch  patch-mpeg4ip-nasm-2.00-configure.patch  patch-mpeg4ip-no_compressor_name.patch  patch-mpeg4ip-pascal-str.patch  patch-mpeg4ip.patch  patch-x264-X86UB.patch  patch-x264-aq.patch  patch-x264-cygwin.patch  patch-x264-idr.patch  patch-x264-linux.patch  patch-x264-macintel.patch  patch-x264-solaris.patch  patch-x264-vbv-1pass.patch  patch-x264-vbv-2pass.patch  patch-xvidcore-cygwin.patch  patch-xvidcore-nasm-2.00-configure.patch  patch_mpeg4ip_cygwin.patch  version_a52dec.txt  version_bzip2.txt  version_faac.txt  version_faad2.txt  version_ffmpeg.txt  version_lame.txt  (+15 more)
core/: Ac3Dec.c  Ac3Dec.h  Ac3Decoder.cpp  Ac3Decoder.h  AviMux.c  AviMux.h  AviMuxer.cpp  AviMuxer.h  Common.cpp  Common.h  DVDRead.c  DVDRead.h  DVDReader.cpp  DVDReader.h  FaacEnc.c  FfmpegEnc.c  FfmpegEnc.h  Fifo.c  Fifo.cpp  Fifo.h  HBInternal.h  HandBrake.c  HandBrake.h  HandBrakeInternal.h  Jamfile  Languages.h  LpcmDec.c  MadDec.c  MadDec.h  Manager.cpp  Manager.h  Mp3Enc.c  Mp3Enc.h  Mp3Encoder.cpp  Mp3Encoder.h  Mp4Mux.c  Mpeg2Dec.c  Mpeg2Dec.h  Mpeg2Decoder.cpp  Mpeg2Decoder.h  (+31 more)
doc/: AUTHORS  BUILD-Cygwin  BUILD-Linux  BUILD-Mac  BUILD-MinGW  NEWS  TRANSLATIONS  faq.html  faq.txt  genhtml.sh  module.defs  module.rules  xml2wiki.py
graphics/: AUTHORS.markdown  LICENSE
gtk/: .cvsignore  ChangeLog  Jamfile  Makefile.am  Makefile.in  README  TODO.tasks  autogen.sh  config.h.in  configure  configure.ac  configure~  ghb.anjuta  ghb.spec  intltool-extract.in  intltool-merge.in  intltool-update.in  ltmain.sh  meson.build  meson_options.txt  module.defs  module.rules  todo
gtk/data/: data_res.gresource.xml  fr.handbrake.ghb.desktop.in  fr.handbrake.ghb.metainfo.xml.in  fr.handbrake.ghb.metainfo.xml.in.in  internal_defaults.json  makedeps.py  marshalers.list  meson.build  post_install.py  version.py  version.sh
gtk/icons/: icon_res.gresource.xml  meson.build
gtk/po/: .cvsignore  LINGUAS  Makefile.in.in  Makevars  POTFILES.in  af.po  bg.po  ca.po  co.po  cs.po  da.po  de.po  es.po  eu.po  fi.po  fr.po  ghb.pot  gl_ES.po  he.po  hr.po  it.po  it_IT.po  ja.po  ja_JP.po  ka.po  ko.po  meson.build  nl.po  no.po  pl.po  pt.po  pt_BR.po  ro.po  ro_RO.po  ru.po  si.po  sk.po  sl_SI.po  sv.po  th.po  (+4 more)
gtk/src/: .cvsignore  Makefile.am  Makefile.in  appcast.c  appcast.h  application.c  application.h  audiohandler.c  audiohandler.h  callbacks.c  callbacks.h  chapters.c  chapters.h  color-scheme.c  color-scheme.h  common.h  compat.c  compat.h  composite_example.c  create_resources.c  create_resources.py  data_res.gresource.xml  fr.handbrake.ghb.appdata.template.xml  fr.handbrake.ghb.appdata.xml  fr.handbrake.ghb.appdata.xml.template  fr.handbrake.ghb.desktop  fr.handbrake.ghb.metainfo.template.xml  fr.handbrake.ghb.metainfo.xml.in.in  ghb-3.12.ui  ghb-3.14.ui  ghb-button.c  ghb-button.h  ghb-chapter-row.c  ghb-chapter-row.h  ghb-dvd.c  ghb-dvd.h  ghb-file-button.c  ghb-file-button.h  ghb-queue-row.c  ghb-queue-row.h  (+115 more)
gtk/src/icons/hicolor/: index.theme
gtk/src/ui/: custom.css  ghb-button.ui  ghb-chapter-row.ui  ghb-file-button.ui  ghb-queue-row.ui  ghb-string-list.ui  ghb.ui  menu.ui  ui_res.gresource.xml
gtk/src/ui-gtk3/: ghb.ui  menu.ui
gtk/src/ui-gtk4/: ghb.ui  menu.ui
gtk2/: callbacks.c  callbacks.h  gtk2hb.glade  interface.c  interface.h  main.c  status.h  support.c  (+1 more)
(+5409 files in other folders)
